[package]
name = "aot-backend"
version = "0.1.0"
edition = "2021"
default-run = "aot-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
anyhow = "1.0.53"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "numeric"] }
dotenv = "0.15.0"
flexi_logger = "0.20.1"
log = "0.4.14"
rand = "0.8.4"
rayon = "1.5.1"
array2d = "0.2.1"
petgraph = "0.5.0"
num-integer = "0.1"
serde = { version = "1.0", features = ["derive"] }
