[package]
name = "aot-backend"
version = "0.1.0"
edition = "2021"
default-run = "aot-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3", features = ["rustls"] }
anyhow = "1.0.53"
derive_more = "0.99.17"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
actix-session = "0.4.1"
flexi_logger = "0.20.1"
log = "0.4.14"
rand = "0.8.4"
rayon = "1.5.1"
thiserror = "1.0.30"
array2d = "0.2.1"
petgraph = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pwhash = "1"
actix-cors = "0.5.4"
diesel_migrations = "1.4.0"
futures = "0.3.21"
base64 = "0.13.0"
redis = { version = "0.21.5", features = ["r2d2"] }
r2d2 = "0.8.9"
actix-redis = "0.9.2"
